--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^1.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-ms-login": "^0.1.2",
     "react-scripts-ts": "2.16.0",
     "typeface-roboto": "0.0.54"
   },
